--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "make-my-trip",
-  "version": "0.3.4",
+  "version": "0.3.7",
   "private": true,
   "dependencies": {
     "@datepicker-react/styled": "^2.8.4",
@@ -17,7 +17,9 @@
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
+    "react-roving-tabindex": "^3.2.0",
     "react-scripts": "5.0.0",
+    "react-tabindex-content": "^1.0.5",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
