--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.29.3",
     "react": "^18.0.0",
     "react-autosuggest": "^10.1.0",
+    "react-detect-offline": "^2.4.5",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
